service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ravikumara004-dev
spec:
  selector:
    app: nginx-demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
